[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "<4.0,>=3.9"
numpy = "^2.0.2"
replit = "^4.1.0"
Flask = "^3.1.2"
urllib3 = "^2.5.0"
telebot = "^0.0.5"


[tool.poetry.dev-dependencies]
debugpy = "^1.8.17"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"